List import on the run - execution done
